After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 771532 - Status on Power dialog box doesn't reflect real settings for Automatic Suspend
Status on Power dialog box doesn't reflect real settings for Automatic Suspend
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Power
3.21.x
Other Linux
: Normal normal
: ---
Assigned To: Richard Hughes
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-09-16 13:09 UTC by Matteo F. Vescovi
Modified: 2016-09-20 08:42 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Screenshot of Automatic Suspend dialog box (1.20 MB, image/png)
2016-09-16 13:09 UTC, Matteo F. Vescovi
  Details
power: Fix "automatic suspend" label not taking batteries into account (1.36 KB, patch)
2016-09-16 15:38 UTC, Bastien Nocera
committed Details | Review

Description Matteo F. Vescovi 2016-09-16 13:09:11 UTC
Created attachment 335698 [details]
Screenshot of Automatic Suspend dialog box

Even if you set Automatic Suspend on battery power, main Power dialog keeps showing that it's "Off".
This doesn't happen for the other option "Plugged In", it seems.

If you unset/set the trigger, then status is updated but got reset to "Off" again right after you close the Power preferences and get back in.

Attached, screenshot of the actual behaviour.
Comment 1 Bastien Nocera 2016-09-16 15:38:47 UTC
Created attachment 335719 [details] [review]
power: Fix "automatic suspend" label not taking batteries into account

Whether or not we have batteries was computed after we updated the
label.
Comment 2 Bastien Nocera 2016-09-20 08:42:21 UTC
Attachment 335719 [details] pushed as 4033a3d - power: Fix "automatic suspend" label not taking batteries into account