power: Fix "automatic suspend" label not taking batteries into account

Whether or not we have batteries was computed after we updated the
label.

https://bugzilla.gnome.org/show_bug.cgi?id=771532